
8.  added more unit tests

9.  significantly improved execution of comparison statements, affecting [if], [else-if] and [while]
    making unit tests execute apprx. 30% faster

10. fixed a bug in magix.forms.set-style that made it impossible to remove a style value

11. fixed such that some active events that is created initially during startup is not serialized, as they neither should

12. added support for changing cs class when invoking magix.viewport.clear-controls by adding new-class as paratemeter to reset-class

13. added case parameter to magix.execute.index-of to make it possible to perform a case-insensitive search for a string

14. magix.forms.set-info can now take formatting parameters

15. fixed a bug in magix.execute.replace that didn't allow for "with" to have formatting parameters without messing up "what"

16. added support for replacing \r, \n and \t in magix.execute.replace in both "with" and "what" parameters

17. added support for transfering a file with different name through "as" parameter in magix.web.transfer-file

18. magix.data load/remove/save can now take formatting expressions within their [id] nodes

19. magix.forms.set-class can now take formatting parameters in [value]

20. magix.forms.set-title can now take formatting parameters in [value]

21. fixed a bug in MUX which sometimes would lead to nul reference exceptions when settings values of controls to null in ajax callbacks

22. created magix.application.set/get to set and retrieve application objects

23. created "Magix.ide.modules.ConsoleLogger" module, which serves as a console logger

24. fixed main execution of hyperlisp engine such that [using] always maps to "magix.execute.using" such that we can use different 
    namespaces inside other namespaces

25. created new wizard for creating active events that executes hyperlisp files, with the possibility of adding parameters 
    into the file being executed




